--- a/src/index.css
+++ b/src/index.css
@@ -74,3 +74,10 @@ body{
 .submit:active{
     box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
 }
+
+.score{
+   font-weight: 700;
+   font-size: 35px;
+    color: #4D5B9E;
+    text-align: center;
+}
